# git-shortcuts

./: Cargo.toml  README.md
src/: commit.rs  config.rs  error.rs  lib.rs
