[package]
name = "git-shortcuts"
version = "0.1.1-rc0"
edition = "2021"
authors = ["José Duarte <duarte.gmj@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Git shortcuts."
repository = "https://github.com/jmg-duarte/git-shortcuts"
documentation = "https://docs.rs/git-shortcuts"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git"]

[dependencies]
git2 = "0.13"
clap = { version = "3.1.0", features = ["derive"] }
regex = "1"
phf = { version = "0.10", features = ["macros"] }
color-eyre = "0.5"
thiserror = "1.0"
lazy_static = "1.4"
